--- a/deadlands/sheet/deadlands.css
+++ b/deadlands/sheet/deadlands.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sancreek&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Arbutus&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Kotta+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Reenie+Beanie&display=swap');
+
 .sheet-wrapper {
   width: 950px;
 }
