--- a/deadlands/sheet/deadlands.css
+++ b/deadlands/sheet/deadlands.css
@@ -10,14 +10,40 @@
   width: 950px;
 }
 
+/*  === GENERAL === */
+
+
+.charsheet .sheet-wrapper {
+  width: 950px;
+  overflow:auto;
+}
+
+/* === FONTS === */
+
+.charsheet {
+    font-family:"Kotta One",cursive;
+    font-size:12pt;
+}
+
+.charsheet h2 {
+    
+  font-family: 'Sancreek', cursive;
+  font-weight:normal;
+  font-size: 2em;
+  text-align:center;
+  padding: 10px;
+  text-transform: uppercase;
+}
+
+.charsheet h3 {
+    text-align: center;
+}
+
 /* ===== TABS ===== */
 
 /*this hides the contents of each tab by default*/
 .charsheet div[class^="sheet-section"] {
   display: none;
-  background-color: #b75528;
-  background-image: url("https://reader012.staticloud.net/reader012/html5/20190405/5ad508657f8b9a1a028c9789/bg1.png");
-  background-repeat: no-repeat;
 }
 
 .charsheet input.sheet-tab1:checked ~ div.sheet-section-traits,
@@ -27,7 +53,6 @@
 .charsheet input.sheet-tab5:checked ~ div.sheet-section-core,
 .charsheet input.sheet-tab6:checked ~ div.sheet-section-obsolete {
   display: block;
-  border: solid 1px black;
   border-radius: 4px;
   padding: 5px;
 }
@@ -46,18 +71,23 @@
 .charsheet span.sheet-tab {
     text-align: center;
     display: inline-block;
-    font-size: 13px;
-    background: #c7c3b0;
+    font-size: 14pt;
     color: black;
     font-weight: bold;
     border-radius: 4px;
-
-    width: 130px;
+    min-width: 130px;
     height: 40px;
     cursor: pointer;
     position: relative;
     vertical-align: middle;
     margin-left: -130px;/*originally 91px*/
+    padding-left:10px;
+    padding-right:10px;
+    font-family:'Shadows into Light',cursive;
+    text-transform:uppercase;
+    
+  background:url('https://raw.githubusercontent.com/rlepennec/roll20/ND-charsheet/deadlands/sheet/img/sign.png') center no-repeat;
+  background-size:cover;
 }
 
 /*this modifies the span color once the radio button is selected so you know which tab is selected*/
@@ -67,9 +97,9 @@
 .charsheet input.sheet-tab4:checked + span.sheet-tab4,
 .charsheet input.sheet-tab5:checked + span.sheet-tab5,
 .charsheet input.sheet-tab6:checked + span.sheet-tab6 {
-    background: #2c424e;
-    color: #bfc4c6;
+    color: #ffffff;
     border-radius: 4px;
+    background-image:url('https://raw.githubusercontent.com/rlepennec/roll20/ND-charsheet/deadlands/sheet/img/sign2.png');
 }
 
 /* ===== TABS ===== */
@@ -128,13 +158,25 @@
      vertical-align: middle;
 }
 
-.sheet-attribute {
-    font-size: 16px;
+.sheet-xhuge.sheet-attribute {
+    margin-left: 10px;
+    margin-top: 5px;
+}
+.sheet-xhuge.sheet-attribute label, .charsheet h3{
+    font-size: 1.1em;
+    text-transform:uppercase;
+    font-family: 'Shadows into Light', cursive;
+    font-weight: bold;
 }
 
-.sheet-skill {
-    font-size: 12px;
-    font-style: italic;
+.sheet-xhuge.sheet-attribute label{
+    text-align:left;
+}
+
+.charsheet .sheet-skill label,
+.charsheet .sheet-item{
+    font-size: 12pt;
+    font-weight:bold;
 }
 
 .sheet-skill-specialization {
@@ -145,35 +187,46 @@
 /* ===== Sheet Update Notice ===== */
 
 /* ===== Layout Controls ===== */
-.ui-dialog .charsheet .sheet-4colrow {
+
+.charsheet [class^="sheet-section"] {
+   background-image:url('https://raw.githubusercontent.com/rlepennec/roll20/ND-charsheet/deadlands/sheet/img/parchment3.jpg');
+}
+
+.charsheet [class^="sheet-section"]>div>.sheet-col {
+    border-image-source:url('https://raw.githubusercontent.com/rlepennec/roll20/ND-charsheet/deadlands/sheet/img/border.png');
+    border-image-width:50px;
+    border-image-slice:250;
+    border-image-repeat:stretch;
+    border-style:solid;
+    padding:20px;
+    margin:10px;
+}
+
+.ui-dialog .charsheet .sheet-4colrow, .ui-dialog .charsheet .sheet-3colrow, .ui-dialog .charsheet .sheet-2colrow {
   display:block;
   clear:both
 }
 
-.sheet-4colrow .sheet-col {
+.ui-dialog .charsheet input {
+    vertical-align:baseline!important;
+}
+
+
+.ui-dialog .charsheet .sheet-4colrow .sheet-col {
   width:calc(25% - 21px);
   margin-right:15px
 }
 
-.sheet-4colrow .sheet-col {
-  width:calc(25% - 21px);
+.sheet-3colrow .sheet-col {
+  width:calc(33% - 21px);
   margin-right:15px
 }
 
-.sheet-h1, .sheet-h3{
-    text-align: center;
-    display: block;
+.ui-dialog .charsheet .sheet-2colrow>.sheet-col {
+  width:calc(50% - 80px)!important;
+  margin-right:15px
 }
 
-.sheet-h1 {
-  font-size: 2em;
-  text-align: center;
-}
-
-.sheet-h3 {
-  font-size: 1.17em;
-  margin: .2em;
-}
 
 .sheet-item {
     margin: auto;
@@ -223,10 +276,11 @@
     text-align: center;
 }
 .sheet-xhuge {
-  width: 60%;
+  width: 55%;
   padding-right: 1%;
   display: inline-block;
-  text-align: center;
+  text-align: left;
+  margin-left: 20pt;
 }
 .sheet-xxhuge {
     width: 75%;
@@ -274,7 +328,6 @@ input[type=text], input[type=number], .sheet-textarea{
 }
 
 .sheet-borderdiv {
-    border: 1px solid black;
     padding: 2px;
 }
 
@@ -285,7 +338,9 @@ input[type=text], input[type=number], .sheet-textarea{
 }
 
 .sheet-apthr {
-  margin-top: -1px;
+  margin-bottom: 5px;
+  margin-top:5px;
+  border-top:0.5pt solid #eee;
 }
 
 .sheet-alert {
@@ -371,17 +426,6 @@ input[type=number] {
   border-radius: 0px;
 }
 
-h2 {
-  color: #404040;
-  font-size: 1.5em;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: normal;
-  padding: 3px 0px;
-  margin: 0px;
-  text-align: center;
-  display: block;
-}
-
 button:hover {
   color: #fff;
   background-color: #2c424e;
@@ -420,7 +464,7 @@ textarea {
 }
 
 .sheet-chiprow .sheet-buttons input[type=radio] {
-  top: 20px;
+  top: 25px;
 }
 
 .sheet-big input[type=radio] + span {
@@ -546,7 +590,6 @@ textarea {
 
 .sheet-rolltemplate-default caption {
   background-color: #1d0d0c;
-  border-color: ;
 }
 
 .sheet-rolltemplate-default table {
