--- a/deadlands/sheet/deadlandsclassic_anniversary.css
+++ b/deadlands/sheet/deadlandsclassic_anniversary.css
@@ -1,12 +1,5 @@
-@import "https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap";
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Sancreek&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Arbutus&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kotta+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
-
-/* little hack to override base.css and app.css for testing */
+@import "https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap";@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');@import url('https://fonts.googleapis.com/css2?family=Sancreek&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arbutus&display=swap');@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap');@import url('https://fonts.googleapis.com/css2?family=Kotta+One&display=swap');@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+/* little hack to override base.css and app.css for testing, comment out when integrating*/
 .ui-dialog {
     overflow:auto!important;
 }
@@ -204,17 +197,17 @@
     margin:10px;
 }
 
-.ui-dialog .charsheet .sheet-4colrow, .ui-dialog .charsheet .sheet-3colrow, .ui-dialog .charsheet .sheet-2colrow {
+.charsheet .sheet-4colrow, .ui-dialog .charsheet .sheet-3colrow, .ui-dialog .charsheet .sheet-2colrow {
   display:block;
   clear:both
 }
 
-.ui-dialog .charsheet input {
+.charsheet input {
     vertical-align:baseline!important;
 }
 
 
-.ui-dialog .charsheet .sheet-4colrow .sheet-col {
+.charsheet .sheet-4colrow .sheet-col {
   width:calc(25% - 21px);
   margin-right:15px
 }
@@ -224,7 +217,7 @@
   margin-right:15px
 }
 
-.ui-dialog .charsheet .sheet-2colrow>.sheet-col {
+.charsheet .sheet-2colrow>.sheet-col {
   width:calc(50% - 80px)!important;
   margin-right:15px
 }
