removed .ui-dialog selector

--- a/deadlands/sheet/deadlandsclassic_anniversary.css
+++ b/deadlands/sheet/deadlandsclassic_anniversary.css
@@ -197,7 +197,7 @@
     margin:10px;
 }
 
-.charsheet .sheet-4colrow, .ui-dialog .charsheet .sheet-3colrow, .ui-dialog .charsheet .sheet-2colrow {
+.charsheet .sheet-4colrow, .charsheet .sheet-3colrow, .charsheet .sheet-2colrow {
   display:block;
   clear:both
 }
