--- a/deadlands/sheet/deadlands.css
+++ b/deadlands/sheet/deadlands.css
@@ -196,17 +196,16 @@
     margin:10px;
 }
 
-.ui-dialog .charsheet .sheet-4colrow, .ui-dialog .charsheet .sheet-3colrow, .ui-dialog .charsheet .sheet-2colrow {
+.charsheet .sheet-4colrow, .charsheet .sheet-3colrow, .charsheet .sheet-2colrow {
   display:block;
   clear:both
 }
 
-.ui-dialog .charsheet input {
+.charsheet input {
     vertical-align:baseline!important;
 }
 
-
-.ui-dialog .charsheet .sheet-4colrow .sheet-col {
+.charsheet .sheet-4colrow .sheet-col {
   width:calc(25% - 21px);
   margin-right:15px
 }
@@ -216,11 +215,10 @@
   margin-right:15px
 }
 
-.ui-dialog .charsheet .sheet-2colrow>.sheet-col {
+.charsheet .sheet-2colrow>.sheet-col {
   width:calc(50% - 80px)!important;
   margin-right:15px
 }
-
 
 .sheet-item {
     margin: auto;
